--- a/aa/src/App.css
+++ b/aa/src/App.css
@@ -6,5 +6,13 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f5f5f5;
+  background-color:#222222;
+  color: #ccaabb;
+  font-size: 1.2rem;
+  line-height: 1.5;
+
+
+  @media (min-width: 768px) {
+    font-size: 1.5rem;
+  } 
 }
